# netzip

netzip/: Cargo.toml
netzip/src/: lib.rs
netzip_cli/: Cargo.toml
netzip_cli/src/: main.rs
netzip_parser/: Cargo.toml
netzip_parser/src/: lib.rs
