[package]
name = "netzip"
version = "0.1.0"
edition = "2024"
description = "A library for accessing files in remote ZIPs over HTTP without downloading the entire archive"
categories = ["web-programming::http-client", "compression"]
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.10.1"
netzip_parser = { path = "../netzip_parser" }
reqwest = { version = "0.12.15", features = ["stream"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", default-features = false, features = ["io-std"] }
futures-util = "0.3.31"
tokio-util = "0.7.16"
async-compression = { version = "0.4.28", default-features = false, features = ["tokio", "deflate", "deflate64"] }
