[package]
name = "netzip"
version = "0.1.0"
edition = "2024"
description = "A library for accessing files in remote ZIPs over HTTP without downloading the entire archive"
categories = ["web-programming::http-client", "compression"]
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.11.1"
netzip_parser = { path = "../netzip_parser" }
reqwest = { version = "0.13.2", features = ["stream"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
tokio-util = "0.7.18"
async-compression = { version = "0.4.39", default-features = false, features = ["tokio", "deflate", "deflate64"] }
