[package]
name = "netzip"
version = "0.1.0"
edition = "2024"
description = "A library for accessing files in remote ZIPs over HTTP without downloading the entire archive"
categories = ["web-programming::http-client", "compression"]
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dependencies]
bytes = "1.11.1"
netzip_parser = { path = "../netzip_parser" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", default-features = false, features = ["io-std"] }
futures-util = "0.3.32"
tokio-util = "0.7.18"

[dependencies.async-compression]
version = "0.4.41"
default-features = false
features = ["tokio", "deflate", "deflate64"]

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = ["stream", "http2", "system-proxy"]
