[package]
name = "netzip_cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for efficiently working with remote ZIP files over HTTP without downloading the entire archive"
categories = [
    "command-line-utilities",
    "web-programming::http-client",
    "compression",
]
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "netzip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
netzip = { path = "../netzip" }
comfy-table = "7.2.2"
bittenhumans = "1.0.0"
