[package]
name = "netzip_cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for efficiently working with remote ZIP files over HTTP without downloading the entire archive"
categories = [
    "command-line-utilities",
    "web-programming::http-client",
    "compression",
]
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "netzip"
path = "src/main.rs"

[features]
default = ["rustls"]
rustls = ["netzip/rustls"]
native-tls = ["netzip/native-tls"]
native-tls-vendored = ["netzip/native-tls-vendored"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
tokio = { version = "1.50.0", features = ["macros", "rt"] }
netzip = { path = "../netzip", default-features = false }
comfy-table = "7.2.2"
bittenhumans = "1.0.0"
